[gd_scene load_steps=6 format=3 uid="uid://vogy05tmjfq0"]

[ext_resource type="Script" path="res://metrics_hud.gd" id="1_2qiyi"]
[ext_resource type="Texture2D" uid="uid://dndceadu1te4o" path="res://Mortes.png" id="1_8k1qx"]
[ext_resource type="Texture2D" uid="uid://tv5wvfc516rt" path="res://NÃºmero de planetas viajados.png" id="2_xu7f8"]
[ext_resource type="Texture2D" uid="uid://bn0nlqh8anoyl" path="res://X (errado).png" id="3_l7ww2"]
[ext_resource type="FontFile" uid="uid://bbvqbvo8bcb8f" path="res://Xolonium-Regular.ttf" id="5_1r605"]

[node name="Metrics HUD" type="CanvasLayer"]
script = ExtResource("1_2qiyi")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 166.0
offset_top = 33.0
offset_right = 658.0
offset_bottom = 96.0
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="DeathCounter" type="Sprite2D" parent="Container"]
position = Vector2(18, 31)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_8k1qx")

[node name="PlanetCounter" type="Sprite2D" parent="Container"]
position = Vector2(210, 63)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_xu7f8")

[node name="ErrorCounter" type="Sprite2D" parent="Container"]
position = Vector2(402, 31)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_l7ww2")

[node name="DeathCounterLabel" type="Label" parent="Container"]
layout_mode = 2
offset_left = 52.0
offset_top = -13.0
offset_right = 109.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("5_1r605")
theme_override_font_sizes/font_size = 80
text = "0"

[node name="PlanetCounterLabel" type="Label" parent="Container"]
layout_mode = 2
offset_left = 288.0
offset_top = -13.0
offset_right = 345.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("5_1r605")
theme_override_font_sizes/font_size = 80
text = "0"

[node name="ErrorCounterLabel" type="Label" parent="Container"]
layout_mode = 2
offset_left = 439.0
offset_top = -13.0
offset_right = 496.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("5_1r605")
theme_override_font_sizes/font_size = 80
text = "0"
